Changes for z.ach.fun site

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -223,7 +223,7 @@ ol ol {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
+  /*text-align: center;*/
 }
 
 .content {
@@ -232,7 +232,7 @@ ol ol {
   flex: 1 auto;
   align-items: center;
   justify-content: center;
-  margin: 50px 0;
+  /* margin: 50px 0; */
 
   @media #{$media-size-phone} {
     margin-top: 0;
